Update PublicacionController.java